No more fixed backgrounds
They trash the repaints too much :(

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -51,7 +51,7 @@ img.lazy-load {
     top: 0;
 	height: 100%;
 	width: 61.8%;
-	background-attachment: fixed;
+	//background-attachment: fixed;
 	background-image: url(../images/wavy-pattern.png);
 
 	@include highres() {
